index.html edited online with Bitbucket

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <div class="container">
-      <h4>Welcome to Docker Container, This very simple Python App!!</h4>
+      <h4>Welcome to Docker Container, This is a very simple Python App running!!</h4>
     </div>
   </body>
 </html>
